--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Boldly Going Nowhere
+email: teedang19@gmail.com
+description: "Tam T. Dang, what a badass."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://www.tamatojuice.com"
 
 # Build settings
 markdown: kramdown
