update email to personal domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Boldly Going Nowhere
-email: teedang19@gmail.com
+email: tamdang@tamatojuice.com
 description: "Tam T. Dang, what a badass."
 baseurl: ""
 url: "http://www.tamatojuice.com"
