sitename to tamato, various renamings of links

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: Boldly Going Nowhere
+title: tamatojuice
+author: Tam T. Dang
 email: tamdang@tamatojuice.com
 description: "Tam T. Dang, what a badass."
 baseurl: ""
