--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: tamatojuice
 author: Tam T. Dang
 email: tamdang@tamatojuice.com
-description: "Tam T. Dang, what a badass."
+description: "hey there, you little badass."
 baseurl: ""
 url: "http://www.tamatojuice.com"
 github_username: teedang19
