change site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site settings
-title: tamatojuice
-author: Tam T. Dang
+title: Tam T. Dang
 email: tamdang@tamatojuice.com
 description: "hey there, you little badass."
 baseurl: ""
