--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Tam T. Dang
-email: tamdang@tamatojuice.com
-description: "hey there, you little badass."
+email: dang@tamatojuice.com
+description: "daaang, my email address rocks."
 baseurl: ""
 url: "http://www.tamatojuice.com"
 github_username: teedang19
