change email to gmail

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Tam T. Dang
-email: dang@tamatojuice.com
+email: teedang19@gmail.com
 description: "daaang, my email address rocks."
 baseurl: ""
 url: "http://www.tamatojuice.com"
