--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Tam T. Dang
+title: ""
 email: teedang19@gmail.com
-description: "daaang, my email address rocks."
+description: ""
 baseurl: ""
-url: "http://www.tamatojuice.com"
+url: "teedang19.github.io"
 github_username: teedang19
 twitter_username: tamatojuice
 
